fix nav spacing and line height

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,6 @@ nav ul {
     margin: 0;
     padding: 20px 0px 0px 0px;
     list-style: none;
-    line-height: normal;
 }
 
 nav li {
@@ -122,9 +121,6 @@ nav li {
 
 nav a {
     display: block;
-    line-height: 100px;
-    margin-right: 1px;
-    padding: 0px 20px 0px 20px;
     text-decoration: none;
     text-align: center;
     text-shadow: 1px 1px 0px rgba(0,0,0,.2);
